fix: dropdown dark mode

--- a/packages/components/src/components/dropdown/dropdown.css
+++ b/packages/components/src/components/dropdown/dropdown.css
@@ -92,7 +92,7 @@ scale-dropdown {
 .dropdown--hide-label .input__dropdown {
   padding: 5px var(--telekom-spacing-unit-x10) 5px calc(var(--spacing-x) - 1px);
 }
-
+  
 .dropdown--hide-label .input__label {
   visibility: hidden;
 }
@@ -230,6 +230,19 @@ scale-dropdown {
 
 /* Tokens exceptionally hard-coded, instead of using the component variables,
 to fix bug in Firefox/Windows, see https://github.com/telekom/scale/issues/1018) */
+
+[data-mode='light']
+  .dropdown:not(.dropdown--disabled):not(.dropdown--variant-danger)
+  .input__dropdown:hover {
+  background-color: var(--telekom-color-ui-state-fill-hovered);
+}
+
+[data-mode='light']
+  .dropdown:not(.dropdown--disabled).dropdown--variant-danger
+  .input__dropdown:hover {
+  background-color: var(--telekom-color-ui-state-fill-hovered);
+}
+
 [data-mode='dark'] .dropdown .input__dropdown {
   background-color: var(--telekom-color-background-canvas);
 }
